--- a/smith-portfolio-master/index.html
+++ b/smith-portfolio-master/index.html
@@ -10,12 +10,12 @@
   <!-- 
     - favicon
   -->
-  <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
+  <link rel="shortcut icon" href="/lxx/./favicon.svg" type="image/svg+xml">
 
   <!-- 
     - custom css link
   -->
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="/lxx/./assets/css/style.css">
 
   <!-- 
     - google font link
@@ -28,7 +28,7 @@
   <!-- 
     - preload images
   -->
-  <link rel="preload" as="image" href="./assets/images/hero-banner.jpg">
+  <link rel="preload" as="image" href="/lxx/./assets/images/hero-banner.jpg">
 
 </head>
 
